# unidok

./: 0.bootstrap.js  1.bootstrap.js  1.bootstrap.js.map  2.bootstrap.js  2.bootstrap.js.map  Basics.ud  CHANGELOG.md  Cargo.toml  Macros.ud  README.md  Tutorial.ud  bootstrap.js  bootstrap.js.map  index.html  index_js.bootstrap.js  rustfmt.toml  style.css
.github/workflows/: deploy-web.yml  release.yml  test.yml
crates/detached-str/: Cargo.toml  README.md
crates/detached-str/src/: lib.rs  slice.rs  tests.rs
crates/unidoc-parser/: Cargo.toml
crates/unidoc-parser/src/: attributes.rs  basic.rs  blocks.rs  braces.rs  code_blocks.rs  collapse_text.rs  comments.rs  cond.rs  escapes.rs  escapes_limiters.rs  headings.rs  hr.rs  images.rs  indent.rs  inline.rs  input.rs  ir.rs  lib.rs  limiters.rs  line_breaks.rs  links.rs  lists.rs  macros.rs  marker.rs  math.rs  nodes.rs  parse.rs  parser_state.rs  parsing_mode.rs  quotes.rs  statics.rs  str.rs  subst_text.rs  tables.rs  test_macros.rs  text.rs  visitor.rs
crates/unidoc-parser/src/blocks/: blocks_impl.rs  code_blocks.rs  comments.rs  headings.rs  link_ref_defs.rs  lists.rs  macros.rs  mod.rs  paragraphs.rs  quotes.rs  tables.rs  thematic_breaks.rs
crates/unidoc-parser/src/containers/: lists.rs  macros.rs  mod.rs  quotes.rs
crates/unidoc-parser/src/html/: attr.rs  cdata.rs  comment.rs  doctype.rs  elem.rs  elem_name.rs  entities.rs  mod.rs  node.rs
crates/unidoc-parser/src/inlines/: braces.rs  code.rs  escaped.rs  format.rs  formatting.rs  images.rs  limiters.rs  line_breaks.rs  links.rs  macros.rs  math.rs  mod.rs  segments.rs  text.rs
crates/unidoc-parser/src/leaves/: code_blocks.rs  comments.rs  headings.rs  lines.rs  mod.rs  paragraphs.rs  tables.rs  thematic_breaks.rs
crates/unidoc-parser/src/macros/: args.rs  block_macros.rs  inline_macros.rs  mod.rs  token_trees.rs  utils.rs
crates/unidoc-parser/src/parse/: attributes.rs  basic.rs  braces.rs  code_blocks.rs  comments.rs  escapes_limiters.rs  headings.rs  hr.rs  images.rs  indent.rs  inline.rs  links.rs  lists.rs  macros.rs  marker.rs  math.rs  nodes.rs  quotes.rs  statics.rs  subst_text.rs  tables.rs  text.rs
crates/unidoc-parser/src/utils/: cond.rs  indent.rs  line_boundaries.rs  mod.rs  std_types.rs  text.rs  until.rs  while.rs  whitespace.rs
crates/unidoc-repr/: Cargo.toml
crates/unidoc-repr/src/: to_plaintext.rs
crates/unidoc-repr/src/ast/: blocks.rs  macros.rs  mod.rs  state.rs
crates/unidoc-repr/src/ast/html/: mod.rs
crates/unidoc-repr/src/into_ir/: blocks.rs  foreign_impls.rs  html.rs  macros.rs  mod.rs  segments.rs
crates/unidoc-repr/src/ir/: blocks.rs  html.rs  macros.rs  segments.rs  state.rs
crates/unidoc-to-html/: Cargo.toml
crates/unidoc-to-html/src/: into_node.rs  lib.rs  nice_debug.rs  plaintext.rs  to_html.rs  to_plaintext.rs
crates/unidoc-to-html/src/into_node/: block.rs  helpers.rs  html.rs  macros.rs  mod.rs  segment.rs
crates/unidok-parser/: Cargo.toml  README.md
crates/unidok-parser/src/: accumulate.rs  input.rs  lib.rs  parsing_mode.rs  state.rs  test_macros.rs
crates/unidok-parser/src/blocks/: blocks_impl.rs  code_blocks.rs  comments.rs  headings.rs  link_ref_defs.rs  lists.rs  mod.rs  quotes.rs  tables.rs  thematic_breaks.rs
crates/unidok-parser/src/html/: attr.rs  cdata.rs  comment.rs  doctype.rs  elem.rs  elem_name.rs  entities.rs  node.rs
crates/unidok-parser/src/inlines/: braces.rs  code.rs  escaped.rs  format.rs  images.rs  limiters.rs  links.rs  math.rs  mod.rs  segments.rs
crates/unidok-parser/src/macros/: args.rs  block_macros.rs  inline_macros.rs  mod.rs  token_trees.rs  utils.rs
crates/unidok-parser/src/utils/: indent.rs  line_boundaries.rs  mod.rs  std_types.rs  text.rs  until.rs  while.rs  whitespace.rs
crates/unidok-repr/: Cargo.toml  README.md
crates/unidok-repr/src/: config.rs  lib.rs  quotes.rs  spans.rs  to_plaintext.rs  to_spans.rs  try_reduce.rs
crates/unidok-repr/src/ast/: blocks.rs  data.rs  macros.rs  mod.rs  segments.rs  state.rs
crates/unidok-repr/src/ast/html/: elem_name.rs  entity.rs  mod.rs
crates/unidok-repr/src/into_ir/: blocks.rs  foreign_impls.rs  html.rs  macros.rs  mod.rs  segments.rs  utils.rs
crates/unidok-repr/src/ir/: blocks.rs  html.rs  macros.rs  mod.rs  segments.rs  state.rs
crates/unidok-to-html/: Cargo.toml  README.md
crates/unidok-to-html/src/: filter_for_toc.rs  lib.rs  to_html.rs  util.rs
crates/unidok-to-html/src/into_node/: block.rs  helpers.rs  html.rs  macros.rs  mod.rs  segment.rs
sections/: Basics.ud  Design.ud  Macros.ud  Roadmap.ud  Tutorial.ud
src/: file_conversions.rs  main.rs
tests/: commonmark.json  it.rs
tests/test_cases/: code_blocks.txt  comments.txt  headings1.txt  headings2.txt  headings3.txt  html.txt  html_comments.txt  inline_code.txt  lists1.txt  lists2.txt  quotes.txt  substitutions.txt  tables.txt  tables1.txt  tables2.txt  tables3.txt  tables4.txt  thematic_breaks.txt
unidoc-playground/: Cargo.toml  LICENSE_MIT  README.md  Startpage.ud
unidoc-playground/src/: lib.rs
unidoc-playground/www/: index.html  index.js  package-lock.json  package.json  style.css  webpack.config.js
unidoc-playground/www/sections/: Design.ud  Macros.ud  Other.ud  Tutorial.ud
unidok-js/: Cargo.toml  README.md
unidok-js/src/: lib.rs
unidok-playground/: Cargo.toml  LICENSE_MIT  README.md
unidok-playground/www/: index.html  index.js  package-lock.json  package.json  style.css
unidok-playground/www/sections/: Basics.ud  Design.ud  Macros.ud  Roadmap.ud
website/: README.md  index.html  index.js  package-lock.json  package.json  style.css  tsconfig.json  webpack.config.js
website/sections/: Basics.ud  Design.ud  Macros.ud  Roadmap.ud  Tutorial.ud
website/src/: index.js  index.ts  playground.ts
