[workspace]
members = ["crates/*"]

[package]
name = "unidok"
version = "0.1.0"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unidok-parser = { path = "crates/unidok-parser", version = "0.1" }
unidok-to-html = { path = "crates/unidok-to-html", version = "0.1" }

[[test]]
name = "it"
path = "tests/it.rs"
harness = false

[dev-dependencies]
similar = "1.3"
