[workspace]
members = ["crates/*"]

[package]
name = "unidok"
version = "0.2.0"
description = "A powerful, readable, easy-to-learn markup language"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
edition = "2018"
keywords = ["unidok", "markdown", "commonmark", "asciidoc"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/unidok"
homepage = "https://aloso.github.io/unidok"
repository = "https://github.com/Aloso/unidok"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unidok-parser = { path="crates/unidok-parser", version="0.2" }
unidok-to-html = { path="crates/unidok-to-html", version="0.2" }
unidok-repr = { path="crates/unidok-repr", version="0.2" }
clap = { version="2.33", features=["color"] }
ignore = "0.4.17"
anyhow = "1.0"
rayon = "1.5"

[[test]]
name = "it"
path = "tests/it.rs"
harness = false

[dev-dependencies]
similar = "1.3"
