[workspace]

[package]
name = "unidok"
description = "A powerful, readable, easy-to-learn markup language"
version = "0.1.0"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
unidok-parser = { version = "0.1", path = "../crates/unidok-parser" }
unidok-to-html = { version = "0.1", path = "../crates/unidok-to-html" }
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
