[workspace]

[package]
name = "unidok"
description = "A powerful, readable, easy-to-learn markup language"
version = "0.1.0"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
edition = "2018"
keywords = ["webassembly", "wasm", "rust", "webpack"]
homepage = "https://aloso.github.io/unidok"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Aloso/unidok"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
unidok-parser = { version = "0.1", path = "../crates/unidok-parser" }
unidok-to-html = { version = "0.1", path = "../crates/unidok-to-html" }
unidok-repr = { version = "0.1", path = "../crates/unidok-repr", features = ["serde-spans"] }

wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.2.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
