[package]
name = "unidoc-to-html"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unidoc-repr = { path = "../unidoc-repr", version = "0.1" }
unidoc-parser = { path = "../unidoc-parser", version = "0.1" }
itertools = "0.10.0"
asciimath-rs = "0.5.8"
