[package]
name = "unidok-parser"
version = "0.1.0"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
detached-str = { path = "../detached-str", version = "0.1" }
unidok-repr = { path = "../unidok-repr", version = "0.1" }
