[package]
name = "unidok-repr"
description = "AST and IR for the unidok-parser crate"
version = "0.1.0"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/unidok-repr"
repository = "https://github.com/Aloso/unidok"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
detached-str = { path = "../detached-str", version = "0.1" }
serde = { version = "1.0", optional = true }
slug = "0.1.4"

[features]
serde-spans = ['serde']
