[package]
name = "unidok-to-html"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unidok-repr = { path = "../unidok-repr", version = "0.1" }
unidok-parser = { path = "../unidok-parser", version = "0.1" }
itertools = "0.10.0"
asciimath-rs = "0.5.8"
